--- a/project-addons/product_serial_number/views/location_info_view.xml
+++ b/project-addons/product_serial_number/views/location_info_view.xml
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
-    
+
     <record id="view_locationinfo_form" model="ir.ui.view">
         <field name="name">location.info.form</field>
         <field name="model">location.info</field>
@@ -9,7 +9,7 @@
             <form>
                 <sheet>
                     <group>
-                        <field name="name"/>
+                        <field name="name" />
                     </group>
                 </sheet>
             </form>
@@ -21,7 +21,7 @@
         <field name="model">location.info</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="name"/>
+                <field name="name" />
             </tree>
         </field>
     </record>
@@ -31,7 +31,7 @@
         <field name="model">location.info</field>
         <field name="arch" type="xml">
             <search string="Locations">
-                <field name="name"/>
+                <field name="name" />
             </search>
         </field>
     </record>
@@ -42,7 +42,11 @@
         <field name="type">ir.actions.act_window</field>
     </record>
 
-    <menuitem action="action_location_info" id="menu_action_location_info"
-        parent="stock.menu_warehouse_config" sequence="4"/>
+    <menuitem
+        action="action_location_info"
+        id="menu_action_location_info"
+        parent="stock.menu_warehouse_config"
+        sequence="4"
+    />
 
 </odoo>
