--- a/project-addons/product_serial_number/views/product_view.xml
+++ b/project-addons/product_serial_number/views/product_view.xml
@@ -1,18 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
          <record id="cc_view_product_template" model="ir.ui.view">
             <field name="name">cc.view.product.templatec</field>
             <field name="model">product.template</field>
-            <field name="inherit_id" ref="product.product_template_form_view"/>
+            <field name="inherit_id" ref="product.product_template_form_view" />
             <field name="arch" type="xml">
                 <div name="options" position="inside">
-                    <div attrs="{'invisible':[('type', 'not in', ['product', 'consu', 'service'])]}">
-                        <field name="serial_mgmt"/>
-                        <label for="serial_mgmt"/>
+                    <div
+                    attrs="{'invisible':[('type', 'not in', ['product', 'consu', 'service'])]}"
+                >
+                        <field name="serial_mgmt" />
+                        <label for="serial_mgmt" />
                     </div>
-                    <div attrs="{'invisible':[('type', 'not in', ['product', 'consu', 'service'])]}">
-                        <field name="police"/>
-                        <label for="police"/>
+                    <div
+                    attrs="{'invisible':[('type', 'not in', ['product', 'consu', 'service'])]}"
+                >
+                        <field name="police" />
+                        <label for="police" />
                     </div>
                     <!-- <div attrs="{'invisible':['|', ('police', '!=', True), ('type', 'not in', ['product', 'consu', 'service'])]}">
                         <label for="police_days"/>
@@ -21,10 +25,12 @@
                 </div>
 
                 <field name="categ_id" position="after">
-                     <field name="police_days" 
-                     attrs="{
+                     <field
+                    name="police_days"
+                    attrs="{
                          'invisible':['|', ('police', '!=', True), ('type', 'not in', ['product', 'consu', 'service'])],
-                         'required':[('police', '=', True)]}"/>
+                         'required':[('police', '=', True)]}"
+                />
                 </field>
             </field>
         </record>
@@ -32,10 +38,14 @@
         <record id="cc_product_template_search_view" model="ir.ui.view">
             <field name="name">cc.product.template.search.view</field>
             <field name="model">product.template</field>
-            <field name="inherit_id" ref="product.product_template_search_view"/>
+            <field name="inherit_id" ref="product.product_template_search_view" />
             <field name="arch" type="xml">
-               <filter  name="services" position="before">
-                    <filter string="Manage by serial number" name="mgmt_serial" domain="[('serial_mgmt','=',True)]"/>
+               <filter name="services" position="before">
+                    <filter
+                    string="Manage by serial number"
+                    name="mgmt_serial"
+                    domain="[('serial_mgmt','=',True)]"
+                />
                </filter>
             </field>
         </record>
@@ -44,16 +54,22 @@
         <record id="cc_product_product_form" model="ir.ui.view">
             <field name="name">cc.product.product.form</field>
             <field name="model">product.product</field>
-            <field name="inherit_id" ref="product.product_normal_form_view"/>
+            <field name="inherit_id" ref="product.product_normal_form_view" />
             <field name="arch" type="xml">
                 <field name="barcode" position="after">
-                    <field name="product_tmpl_id" class="oe_inline" readonly="1" invisible="0" attrs="{'required': [('id', '!=', False)]}"/>
+                    <field
+                    name="product_tmpl_id"
+                    class="oe_inline"
+                    readonly="1"
+                    invisible="0"
+                    attrs="{'required': [('id', '!=', False)]}"
+                />
                 </field>
 
                 <field name="uom_po_id" position="after">
-                    <field name="purchase_price_15"/>
-                    <field name="purchase_price_30"/>
-                    <field name="purchase_price_60"/>
+                    <field name="purchase_price_15" />
+                    <field name="purchase_price_30" />
+                    <field name="purchase_price_60" />
                 </field>
             </field>
         </record>
