--- a/project-addons/product_serial_number/wizard/recoverable_sale_wzd.xml
+++ b/project-addons/product_serial_number/wizard/recoverable_sale_wzd.xml
@@ -1,17 +1,33 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-        <record id="view_transfer_lot" model="ir.ui.view">
+        <record id="view_recoverable_lot" model="ir.ui.view">
             <field name="name">Transfer Lot</field>
             <field name="model">recoverable.sale.wzd</field>
             <field name="arch" type="xml">
                 <form>
                     <group>
-                        <field name="product_id" options="{'no_create': True, 'no_create_edit':True}" />
-                        <field name="lot_id" domain="[('product_id','=', product_id), ('limit_date','&gt;', time.strftime('%%Y-%%m-%%d')), ('cc_type','=', 'recoverable_sale')]" options="{'no_create': True, 'no_create_edit':True}" />
+                        <field
+                        name="product_id"
+                        options="{'no_create': True, 'no_create_edit':True}"
+                    />
+                        <field
+                        name="lot_id"
+                        domain="[('product_id','=', product_id), ('limit_date','&gt;', time.strftime('%%Y-%%m-%%d')), ('cc_type','=', 'recoverable_sale')]"
+                        options="{'no_create': True, 'no_create_edit':True}"
+                    />
                     </group>
                     <footer>
-                        <button name="confirm" string="Confirm" type="object" class="btn-primary"/>
-                        <button string="Cancel" class="btn-secondary" special="cancel"/>
+                        <button
+                        name="confirm"
+                        string="Confirm"
+                        type="object"
+                        class="btn-primary"
+                    />
+                        <button
+                        string="Cancel"
+                        class="btn-secondary"
+                        special="cancel"
+                    />
                     </footer>
                 </form>
             </field>
